--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="main__card">
 
       <header class="main__card--header">
-        <img src="images/illustration-hero.svg" alt="">
+        <img src="images/illustration-hero.svg" alt="A girl listening to music background">
       </header>
       
       <div class="main__card--grid">
@@ -32,8 +32,11 @@
         </section>
       
         <section class="main__card--price">
-          <img src="images/icon-music.svg" alt="">
-          <ul>
+          <div class="main__card--image">
+            <img src="images/icon-music.svg" alt="a music icon">
+          </div>
+
+          <ul class="main__card--list">
               <li>
                 <p class="main__card--textanual">Annual Plan</p>
               </li>
@@ -41,9 +44,10 @@
                 <p class="main__card--textprice">$59.99/year</p>
               </li>
           </ul>
-          <a href="#">
-            <p>Change</p>
-          </a>
+
+          <div class="main__card--change">
+            <a href="#">Change</a>
+         </div>
         </section>
 
         <section class="main__card--buttons">
